--- a/NN-classfy.ipynb
+++ b/NN-classfy.ipynb
@@ -38,8 +38,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -54,110 +56,244 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 语料预处理"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 读取文件\n",
-    "sentences = []\n",
-    "labels_train = []\n",
-    "with open('corpus/train_shuffle.txt') as f:\n",
-    "    for line in f.readlines():\n",
-    "        sentences.append(line.strip().split('\\t')[0])\n",
-    "        labels_train.append(line.strip().split('\\t')[1])"
+    "tf.reset_default_graph()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['装了xp系统后，没有出现网友说的驱动不好装的情况',\n",
-       " '总的来说,比较干净,而且地理位置很好,市区繁华地段.进出方便.',\n",
-       " '2、散热很好，这个不用解释了',\n",
-       " '温度控制的非常好，噪音也不大，',\n",
-       " '早上6点多有\"按摩\"电话过来，^_^；不想被打扰的话拔掉电话插头吧',\n",
-       " '网上所披露的位于海河最美的一段，特意要了6层的房间，可是却没看到海河的影子……',\n",
-       " '感觉还不错，房间干净，舒服，具有五星酒店的质数，服务态度还可以，因为觉得服务员有点冷淡。最不好的是地方比较偏，酒店所处位置说得好听的是新城区，直白的就是差不多就是郊区了，好在汕头并不大，到市区繁华的地方也花不了多少时间。另外，酒店附近有一间酒楼，名字叫快活海鲜城，不错。装修上档次，但价钱不贵，出品好，值得推荐。',\n",
-       " '这是一本令人着迷的书，一本可爱的百科全书，一看到书中的介绍，就不禁情动了。一个优秀的男人，是应该杂学博记，能触类旁通的。从小性子里就充满着野性，对于那种粗糙生活有着难以言喻的情结。这一切，恰恰都在书里能找到。有很大的可能，会抢爸爸的角色。哈哈！当然，这本书对小儿子而言还是买的太早了些，希望我的宝贝能早些长大，快快和妈妈一起探险。',\n",
-       " '外观好，，，做工不错，键盘手感好，应该是sony一贯的作风吧，，，',\n",
-       " '虽然是老酒店，设备倒是很齐备，价格也合理。']"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sentences[:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 对每句话进行分词，去掉不影响情感分类的标点、英文字母\n",
-    "sentencts_cut = []\n",
-    "\n",
-    "for sentence in sentences:\n",
-    "    words_cut = []\n",
-    "    for words in jieba.cut(sentence):\n",
-    "        if words >= u'\\u4e00' and words <= u'\\u9fff':\n",
-    "            words_cut.append(words)\n",
-    "    sentencts_cut.append(words_cut)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "word_embedding_dim = 16\n",
+    "vocab_size = 5000\n",
+    "fix_length = 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "inputs_data = tf.placeholder(tf.int32, shape=[None, fix_length], name=\"inputs_data\")\n",
+    "labels = tf.placeholder(tf.int32, shape=[None], name=\"labels\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "word_embedding = tf.Variable(tf.random_uniform([vocab_size, word_embedding_dim]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['装', '了', '系统', '后', '没有', '出现', '网友', '说', '的', '驱动', '不好', '装', '的', '情况'],\n",
-       " ['总的来说', '比较', '干净', '而且', '地理位置', '很', '好', '市区', '繁华', '地段', '进出', '方便'],\n",
-       " ['散热', '很', '好', '这个', '不用', '解释', '了'],\n",
-       " ['温度控制', '的', '非常', '好', '噪音', '也', '不大'],\n",
-       " ['早上',\n",
-       "  '点多',\n",
-       "  '有',\n",
-       "  '按摩',\n",
-       "  '电话',\n",
-       "  '过来',\n",
-       "  '不想',\n",
-       "  '被',\n",
-       "  '打扰',\n",
-       "  '的话',\n",
-       "  '拔掉',\n",
-       "  '电话',\n",
-       "  '插头',\n",
-       "  '吧']]"
+       "<tf.Variable 'Variable:0' shape=(5000, 16) dtype=float32_ref>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sentencts_cut[:5]"
+    "word_embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word_embeds = tf.nn.embedding_lookup(word_embedding, inputs_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor 'embedding_lookup:0' shape=(?, 20, 16) dtype=float32>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_embeds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "word_reduce = tf.reduce_sum(word_embeds, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor 'Sum:0' shape=(?, 16) dtype=float32>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_reduce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hidden layer\n",
+    "hidden = tf.layers.dense(word_reduce, word_embedding_dim ,activation=tf.tanh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor 'dense/Tanh:0' shape=(?, 16) dtype=float32>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hidden"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_embedding_dim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# output layer\n",
+    "raw_output = tf.layers.dense(hidden, 2)\n",
+    "final_output = tf.nn.softmax(raw_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor 'dense_2/BiasAdd:0' shape=(?, 2) dtype=float32>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor 'Softmax:0' shape=(?, 2) dtype=float32>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cost = tf.reduce_mean(\n",
+    "    tf.nn.sparse_softmax_cross_entropy_with_logits(\n",
+    "        logits=raw_output, labels=labels))"
    ]
   },
   {
